# pnf-chart-system

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  update-submodules.sh
.github/workflows/: publish.yml
bindings/c/: pnf_c.cpp  pnf_c.hpp
bindings/csharp/: Chart.cs  ChartTests.cs  DashboardServer.cs  IndicatorTests.cs  Indicators.cs  NativeMethods.cs  PnF.csproj  README.md  Types.cs  Version.cs
bindings/java/: .gitignore  CMakeLists.txt  README.md  SimpleTest.java  TestBasic.java  pnf_java.cpp  pom.xml
bindings/java/com/pnf/: BoxSizeMethod.java  BoxType.java  Chart.java  ChartConfig.java  ColumnType.java  CongestionZone.java  ConstructionMethod.java  DashboardServer.java  IndicatorConfig.java  Indicators.java  LevelType.java  Pattern.java  PatternType.java  PriceObjective.java  Signal.java  SignalType.java  SupportResistanceLevel.java  package-info.java
bindings/java/com/pnf/test/: PnfTest.java
bindings/python/: .gitignore  CMakeLists.txt  MANIFEST.in  README.md  pnf_python.cpp  pypnf_dashboard.py  pyproject.toml  setup.py  test_pypnf.py
bindings/rust/: .gitignore  CMakeLists.txt  Cargo.toml  INSTALL.md  README.md  build.rs
bindings/rust/examples/: basic.rs
bindings/rust/src/: chart.rs  dashboard.rs  ffi.rs  indicators.rs  lib.rs  types.rs
cmake/: pnfConfig.cmake.in
dashboard/web/: app.js  index.html  styles.css
data/: Boom_500_Index_PERIOD_H1.csv  Volatility_75_Index_PERIOD_D1.csv
docs/: architecture.md  dashboard-localhost-testing.md  dashboard-protocol.md  examples.md  index.md  quick-start.md
docs/bindings/: c-abi.md  csharp.md  java.md  python.md  rust.md
docs/concepts/: chart-construction.md  chart-model.md  indicators-and-signals.md  patterns-and-objectives.md  trendlines-and-bias.md
docs/getting-started/: build-and-test.md  first-chart.md  install.md  overview.md
docs/guides/: common-workflows.md  troubleshooting.md
docs/operations/: ci-cd.md  compatibility-matrix.md  release-and-versioning.md  security-memory.md
docs/reference/: api-symbol-index.md  cpp-api.md
examples/: .gitignore  CMakeLists.txt  example_usage.cpp  example_usage.h
examples/cpp/: .gitignore  CMakeLists.txt  real_world_example.cpp
examples/csharp/: .gitignore  RealWorldExample.cs  RealWorldExample.csproj
examples/java/: RealWorldExample.java
examples/python/: .gitignore  real_world_example.py
examples/rust/: Cargo.toml  real_world_example.rs
excels/: boom_500_pnf_chart.xlsx
headers/: csv_loader.h  pnf_chart.h  pnf_chart_indicators.h  pnf_column.h
headers/pnf/: box.hpp  chart.hpp  column.hpp  csv_loader.hpp  indicators.hpp  pnf.hpp  trendline.hpp  types.hpp  version.hpp  viewer.hpp  visualization.hpp
sources/: csv_loader.cpp  main.cpp  pnf_chart.cpp  pnf_chart_indicators.cpp  pnf_chart_visualizer.cpp  pnf_column.cpp
sources/pnf/: box.cpp  chart.cpp  column.cpp  csv_loader.cpp  indicators.cpp  trendline.cpp  types.cpp  viewer.cpp  visualization.cpp
test/: CMakeLists.txt  test_main.cpp  test_pnf_bollinger_bands.cpp  test_pnf_box.cpp  test_pnf_chart.cpp  test_pnf_column.cpp  test_pnf_moving_average.cpp  test_pnf_pattern_recognizer.cpp  test_pnf_price_objective.cpp  test_pnf_signal_detector.cpp  test_pnf_support_resistance.cpp  test_pnf_trendline.cpp
tests/: CMakeLists.txt  test_box.cpp  test_c_api.cpp  test_chart.cpp  test_column.cpp  test_indicators.cpp  test_trendline.cpp  test_visualization.cpp
tests/fixtures/: Boom_500_Index_PERIOD_H1.csv  GBPUSD_PERIOD_M1.csv  Volatility_75_Index_PERIOD_D1.csv
tools/: RunJavaDashboardBoom500.java  bump_version.py  check_docs_coverage.py  check_versions.py  generate_api_symbol_index.py  run_java_dashboard_boom.sh  run_python_dashboard_boom.py
